<resources>
    <string name="app_name">ParcialTP3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="drawer_layout_behavior">androidx.drawerlayout.widget.DrawerLayout$DrawerLayoutCompat</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuración</string>
    <string name="home">Home</string>
    <string name="favoritos">Favoritos</string>
    <string name="adopcion">Adopción</string>
    <string name="publicacion">Publicación</string>
    <string name="generales">Generales</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="search_hint">Buscá por raza o por ubicación</string>
    <string name="more_filters">Más Filtros</string>
    <string name="mascotas_en_adopcion">Mascotas en adopción</string>
    <string name="ubicacion_del_perro">Ubicación del perro</string>
    <string name="mis_favoritos">Mis favoritos</string>

    <!-- Dog Details -->
    <string name="owner_title">Dueño</string>
    <string name="adopt_btn_text">Adoptar</string>
    <string name="mis_adopciones">Mis adopciones</string>
    <string name="peso_del_perro_en_kg">Peso del perro (en KG)</string>
    <string name="filtros">Filtros</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="resultados">Resultados</string>
    <string name="detalles">Detalles</string>

    <!-- Landing Page -->
    <string name="landing_page_title">Adopción de Perritos</string>
    <string name="landing_page_desc">Adopta a un compañerito.\nTe cambiará la vida :)</string>
    <string name="landing_page_btnTxt">Comenzar</string>
    <string name="landing_page_imgDesc">Imagen de la LandingPage</string>
    <string name="ingresar">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string> <!-- to remove the annoying warning -->

</resources>