<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_publication"
            android:title="@string/perfil" />

        <item
            android:id="@+id/configuration"
            android:icon="@drawable/ic_configuration"
            android:title="@string/configuracion" />

        <item
            android:id="@+id/detailsFragment"
            android:icon="@drawable/ic_favourites"
            android:title="(PH) - Detalles" />
    </group>
</menu>