<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/imagesCarrousel"
        android:layout_width="261dp"
        android:layout_height="241dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/tituloLandingPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_title"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/roundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="559dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="124dp"
        android:text="@string/landing_page_btnTxt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/purple_rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/indicador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745">

        <View
            android:id="@+id/itemUnoIndicador"
            android:layout_width="25dp"
            android:layout_height="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_indicator_unselected" />

        <View
            android:id="@+id/itemDosIndicador"
            android:layout_width="25dp"
            android:layout_height="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_indicator_unselected" />

        <View
            android:id="@+id/itemTresIndicador"
            android:layout_width="25dp"
            android:layout_height="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_indicator_unselected" />
    </LinearLayout>

    <TextView
        android:id="@+id/descLandingPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/landing_page_desc"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

</androidx.constraintlayout.widget.ConstraintLayout>
